--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -209,6 +209,7 @@
         <module>sjms2-qpid-amqp-client</module>
         <module>slack</module>
         <module>smallrye-reactive-messaging</module>
+        <module>smb</module>
         <module>soap</module>
         <module>splunk</module>
         <module>spring-rabbitmq</module>
