--- a/extensions/aws2-sqs/deployment/pom.xml
+++ b/extensions/aws2-sqs/deployment/pom.xml
@@ -46,6 +46,10 @@
             <groupId>org.apache.camel.quarkus</groupId>
             <artifactId>camel-quarkus-support-aws2-deployment</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.camel.quarkus</groupId>
+            <artifactId>camel-quarkus-cloudevents-deployment</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
