--- a/extensions/google-sheets/deployment/pom.xml
+++ b/extensions/google-sheets/deployment/pom.xml
@@ -40,6 +40,10 @@
         </dependency>
         <dependency>
             <groupId>org.apache.camel.quarkus</groupId>
+            <artifactId>camel-quarkus-jackson-deployment</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel.quarkus</groupId>
             <artifactId>camel-quarkus-google-sheets</artifactId>
         </dependency>
     </dependencies>
