--- a/extensions/google-storage/runtime/pom.xml
+++ b/extensions/google-storage/runtime/pom.xml
@@ -49,6 +49,10 @@
             <artifactId>camel-google-storage</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.apache.camel.quarkus</groupId>
+            <artifactId>camel-quarkus-cloudevents</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.jboss.logmanager</groupId>
             <artifactId>log4j2-jboss-logmanager</artifactId>
         </dependency>
