--- a/integration-tests/tarfile/pom.xml
+++ b/integration-tests/tarfile/pom.xml
@@ -59,8 +59,7 @@
 
 
     <profiles>
-        <!-- https://github.com/apache/camel-quarkus/issues/5538-->
-        <!--<profile>
+        <profile>
             <id>native</id>
             <activation>
                 <property>
@@ -86,7 +85,7 @@
                     </plugin>
                 </plugins>
             </build>
-        </profile> -->
+        </profile>
         <profile>
             <id>virtualDependencies</id>
             <activation>
