--- a/.github/workflows/camel-master-cron.yaml
+++ b/.github/workflows/camel-master-cron.yaml
@@ -335,6 +335,12 @@ jobs:
         with:
           ref: camel-main
           fetch-depth: 0
+      - name: Rebase branch main onto camel-main
+        run: |
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git fetch origin main
+          git rebase $(cat ~/build-data/main-sha.txt)          
       - name: Reclaim Disk Space
         run: .github/reclaim-disk-space.sh
       - name: Set up JDK 21
