--- a/extensions-support/jackson-dataformat-xml/runtime/pom.xml
+++ b/extensions-support/jackson-dataformat-xml/runtime/pom.xml
@@ -41,6 +41,10 @@
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-xml</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.quarkiverse.cxf</groupId>
+            <artifactId>quarkus-cxf-woodstox</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
