--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -116,6 +116,7 @@
         <module>influxdb</module>
         <module>jackson-avro</module>
         <module>jackson-protobuf</module>
+        <module>jasypt</module>
         <module>java-joor-dsl</module>
         <module>jaxb</module>
         <module>jcache</module>
