--- a/integration-test-groups/cxf-soap/cxf-soap-ws-security-client/src/main/resources/application.properties
+++ b/integration-test-groups/cxf-soap/cxf-soap-ws-security-client/src/main/resources/application.properties
@@ -19,7 +19,7 @@ quarkus.cxf.path=/soapservice
 quarkus.native.resources.includes = wsdl/*.wsdl
 
 # do everything with named parameter sets so that it works in the grouped module
-quarkus.cxf.codegen.wsdl2java.security-client.includes = wsdl/WssCalculatorService.wsdl
+quarkus.cxf.codegen.wsdl2java.security-client.includes = wsdl/WssCalculatorService.wsdl,wsdl/HelloWorld.wsdl
 quarkus.cxf.codegen.wsdl2java.security-client.additional-params = -wsdlLocation,classpath:wsdl/WssCalculatorService.wsdl
 
 # Workaround heap OOMs on GitHub actions
