Upgrade to Quarkus 3.2.10.Final

--- a/poms/bom/pom.xml
+++ b/poms/bom/pom.xml
@@ -6832,6 +6832,7 @@
                         </goals>
                         <phase>process-resources</phase>
                         <configuration>
+                            <onCheckFailure>WARN</onCheckFailure>
                             <additionalBoms>
                                 <additionalBom>io.quarkus:quarkus-bom:${quarkus.version}</additionalBom>
                             </additionalBoms>
