--- a/integration-tests/kudu/pom.xml
+++ b/integration-tests/kudu/pom.xml
@@ -30,17 +30,14 @@
     <name>Camel Quarkus :: Integration Tests :: Kudu</name>
     <description>Integration tests for Camel Quarkus Kudu extension</description>
 
-    <properties>
-        <!-- This is to allow the "deep reflection" we do in KuduInfrastructureTestHelper -->
-        <opens>java.base/java.net=ALL-UNNAMED</opens>
-        <argLine>--add-opens ${opens}</argLine>
-        <quarkus.native.additional-build-args>-J--add-opens=${opens}</quarkus.native.additional-build-args>
-    </properties>
-
     <dependencies>
          <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-resteasy</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-resteasy-jackson</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.camel.quarkus</groupId>
@@ -53,10 +50,6 @@
         <dependency>
             <groupId>org.apache.camel.quarkus</groupId>
             <artifactId>camel-quarkus-direct</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.camel.quarkus</groupId>
-            <artifactId>camel-quarkus-support-commons-logging</artifactId>
         </dependency>
 
         <!-- test dependencies -->
