--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,8 @@
         <minio.version>8.2.2</minio.version><!-- @sync io.quarkiverse.minio:quarkus-minio-parent:${quarkiverse-minio.version} prop:minio.version -->
         <msal4j.version>1.14.0</msal4j.version><!-- @sync com.azure:azure-identity:${azure-identity.version} dep:com.microsoft.azure:msal4j -->
         <mvel2.version>2.5.1.Final</mvel2.version><!-- @sync org.apache.camel:camel-dependencies:${camel.version} prop:mvel-version -->
+        <mvnpm-reactive-element.version>2.0.2</mvnpm-reactive-element.version><!-- TODO: Remove this https://github.com/quarkusio/quarkus/issues/38510 -->
+        <mvnpm-ssr-dom-shim.version>1.1.2</mvnpm-ssr-dom-shim.version><!-- TODO: Remove this https://github.com/quarkusio/quarkus/issues/38510 -->
         <mybatis.version>3.5.15</mybatis.version><!-- @sync io.quarkiverse.mybatis:quarkus-parent:${quarkiverse-mybatis.version} prop:mybatis.version -->
         <oak-jackrabbit-api.version>1.48.0</oak-jackrabbit-api.version><!-- @sync org.apache.jackrabbit:jackrabbit-parent:${jackrabbit-version} prop:oak-jackrabbit-api.version.implemented -->
         <okio.version>${squareup-okio-version}</okio.version>
