use dev services

--- a/integration-tests/infinispan/src/main/resources/application.properties
+++ b/integration-tests/infinispan/src/main/resources/application.properties
@@ -14,7 +14,7 @@
 ## See the License for the specific language governing permissions and
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
-quarkus.infinispan-client.devservices.enabled=false
+quarkus.infinispan-client.devservices.port=31222
 
 # Required by InfinispanRemoteAggregationRepository
 quarkus.camel.native.reflection.serialization-enabled=true
