--- a/.github/workflows/camel-master-cron.yaml
+++ b/.github/workflows/camel-master-cron.yaml
@@ -36,6 +36,7 @@ jobs:
     outputs:
       matrix: ${{ steps.set-native-matrix.outputs.matrix }}
       examples-matrix: ${{ steps.set-examples-matrix.outputs.examples-matrix }}
+      alternate-jvm-matrix: ${{ steps.set-alternate-jvm-matrix.outputs.alternate-jvm-matrix }}
     env:
       MAVEN_OPTS: -Xmx4500m
     steps:
@@ -97,6 +98,15 @@ jobs:
         run: |
           CATEGORIES=$(yq -M -N -I 0 -o=json e 'keys' tooling/scripts/test-categories.yaml | tr '"' "'")
           echo "matrix={'category': ${CATEGORIES}}" >> $GITHUB_OUTPUT
+      - name: Setup Alternate JVM Matrix
+        id: set-alternate-jvm-matrix
+        shell: bash
+        run: |
+          cd integration-tests
+          mvn help:evaluate -Dexpression=project.modules -N -q -DforceStdout | sed -e 's/<[^>]*>//g' -e 's/^[[:space:]]*//' -e '/^$/d' > ${{ runner.temp }}/itest-modules.txt
+          GROUP1_MODULES=$(cat ${{ runner.temp }}/itest-modules.txt | grep -E '^[a-m].*' | tr '\n' ',' | sed 's/,$//')
+          GROUP2_MODULES=$(cat ${{ runner.temp }}/itest-modules.txt | grep -E '^[n-z].*' | tr '\n' ',' | sed 's/,$//')
+          echo "alternate-jvm-matrix={'include': [{'name': 'group-01', 'modules': '${GROUP1_MODULES}'},{'name': 'group-02', 'modules': '${GROUP2_MODULES}'}]}" >> $GITHUB_OUTPUT
       - name: Setup Examples Matrix
         id: set-examples-matrix
         run: |
@@ -138,6 +148,7 @@ jobs:
         run: |
           df -h /
           tar -xzf ../maven-repo.tgz -C ~
+          rm -f ../maven-repo.tgz
           df -h /
       - name: Checkout
         uses: actions/checkout@v4
@@ -219,6 +230,7 @@ jobs:
         run: |
           df -h /
           tar -xzf ../maven-repo.tgz -C ~
+          rm -f ../maven-repo.tgz
           df -h /
       - name: Checkout
         uses: actions/checkout@v4
@@ -295,6 +307,7 @@ jobs:
         run: |
           df -h /
           tar -xzf ../maven-repo.tgz -C ~
+          rm -f ../maven-repo.tgz
           df -h /
       - name: Checkout
         uses: actions/checkout@v4
@@ -327,6 +340,9 @@ jobs:
   integration-tests-alternative-jdk:
     runs-on: ubuntu-latest
     needs: initial-mvn-install
+    strategy:
+      fail-fast: false
+      matrix: ${{ fromJson(needs.initial-mvn-install.outputs.alternate-jvm-matrix) }}
     env:
       MAVEN_OPTS: -Xmx3000m
     steps:
@@ -358,11 +374,16 @@ jobs:
         run: |
           df -h /
           tar -xzf ../maven-repo.tgz -C ~
+          rm -f ../maven-repo.tgz
           df -h /
       - name: cd integration-tests && mvn clean verify
+        shell: bash
+        env:
+          TEST_MODULES: ${{matrix.modules}}
         run: |
           cd integration-tests
           ../mvnw ${CQ_MAVEN_ARGS} ${BRANCH_OPTIONS} \
+            -pl "${TEST_MODULES// /,}" \
             -Dformatter.skip -Dimpsort.skip -Denforcer.skip \
             --fail-at-end \
             clean verify
@@ -386,6 +407,7 @@ jobs:
         shell: bash
         run: |
           tar -xzf ../maven-repo.tgz -C ~
+          rm -f ../maven-repo.tgz
       - name: Checkout
         uses: actions/checkout@v4
         with:
@@ -439,6 +461,7 @@ jobs:
         run: |
           df -h /
           tar -xzf ../maven-repo.tgz -C ~
+          rm -f ../maven-repo.tgz
           df -h /
       - name: Checkout
         uses: actions/checkout@v4
@@ -520,6 +543,7 @@ jobs:
         run: |
           df -h /
           tar -xzf ../maven-repo.tgz -C ~
+          rm -f ../maven-repo.tgz
           df -h /
       - name: Checkout
         uses: actions/checkout@v4
