--- a/extensions-jvm/pom.xml
+++ b/extensions-jvm/pom.xml
@@ -59,6 +59,7 @@
         <module>dsl-modeline</module>
         <module>ehcache</module>
         <module>elasticsearch</module>
+        <module>elasticsearch-rest-client</module>
         <module>etcd3</module>
         <module>fastjson</module>
         <module>flink</module>
