Restore quarkus.runner Maven property to master-openshift tests

--- a/integration-tests/master-openshift/pom.xml
+++ b/integration-tests/master-openshift/pom.xml
@@ -30,6 +30,10 @@
     <name>Camel Quarkus :: Integration Tests :: Master With OpenShift</name>
     <description>Integration tests for Camel Quarkus Master extension with OpenShift</description>
 
+    <properties>
+        <quarkus.runner>${project.build.directory}/quarkus-app/quarkus-run.jar</quarkus.runner>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.apache.camel.quarkus</groupId>
