Rework JasyptSecureExtensionConfigTest configuration for native mode

--- a/integration-tests/jasypt/src/main/resources/application.properties
+++ b/integration-tests/jasypt/src/main/resources/application.properties
@@ -19,7 +19,6 @@
 # jbang org.apache.camel:camel-jasypt:4.3.0 -c encrypt -p my-password -i "some content to encrypt"
 
 quarkus.native.resources.includes = secret.properties
-quarkus.datasource.devservices.enabled = false
 
 camel.main.routes-include-pattern = routes/jasypt-routes.xml,routes/jasypt-routes.yaml
 
@@ -44,3 +43,9 @@ timer.repeatCount.secret = ENC(e8n9auBwOA3XuGNZONICkw==)
 # TODO: https://github.com/apache/camel-quarkus/issues/5665
 #%custom-profile.greeting.secret = ENC(O8w+UtMRj52Z8PKgJg2tRsE7zFH954LH0GJIayMpr5s=)
 #%custom-profile.greeting.expression.secret = ${camel-jasypt::ENC(GKJfy64eBDzxUuQCfArd6OjnAaW/oM9e)}
+
+# Overridden with encrypted values in JasyptSecureExtensionConfigTestProfile
+quarkus.datasource.devservices.username = camel
+quarkus.datasource.devservices.password = c4m31s3cr3t
+quarkus.datasource.username = test-username
+quarkus.datasource.password = test-password
