--- a/integration-tests-jvm/pom.xml
+++ b/integration-tests-jvm/pom.xml
@@ -42,6 +42,7 @@
         <module>azure-servicebus</module>
         <module>azure-storage-datalake</module>
         <module>barcode</module>
+        <module>beanio</module>
         <module>bonita</module>
         <module>chatscript</module>
         <module>chunk</module>
@@ -79,7 +80,9 @@
         <module>jt400</module>
         <module>ldif</module>
         <module>lucene</module>
+        <module>mail-microsoft-oauth</module>
         <module>mvel</module>
+        <module>opensearch</module>
         <module>printer</module>
         <module>pulsar</module>
         <module>quickfix</module>
