--- a/integration-tests/box/pom.xml
+++ b/integration-tests/box/pom.xml
@@ -70,8 +70,7 @@
 
 
     <profiles>
-<!--        Disabled because of https://github.com/apache/camel-quarkus/issues/5160-->
-<!--        <profile>
+        <profile>
             <id>native</id>
             <activation>
                 <property>
@@ -98,7 +97,7 @@
                     </plugin>
                 </plugins>
             </build>
-        </profile>-->
+        </profile>
         <profile>
             <id>virtualDependencies</id>
             <activation>
