Test configuration secured by Jasypt with custom profiles
Fixes #5665

--- a/integration-tests/jasypt/src/main/resources/application.properties
+++ b/integration-tests/jasypt/src/main/resources/application.properties
@@ -40,9 +40,8 @@ timer.delay.secret = ENC(fmdsyY2xfsVnz1JL5gvL8A==)
 timer.repeatCount.secret = ENC(e8n9auBwOA3XuGNZONICkw==)
 
 # Custom profile secret (value translates to: Hello Custom Profile
-# TODO: https://github.com/apache/camel-quarkus/issues/5665
-#%custom-profile.greeting.secret = ENC(O8w+UtMRj52Z8PKgJg2tRsE7zFH954LH0GJIayMpr5s=)
-#%custom-profile.greeting.expression.secret = ${camel-jasypt::ENC(GKJfy64eBDzxUuQCfArd6OjnAaW/oM9e)}
+%custom-profile.greeting.secret = ENC(O8w+UtMRj52Z8PKgJg2tRsE7zFH954LH0GJIayMpr5s=)
+%custom-profile.greeting.expression.secret = ${camel-jasypt::ENC(GKJfy64eBDzxUuQCfArd6OjnAaW/oM9e)}
 
 # Overridden with encrypted values in JasyptSecureExtensionConfigTestProfile
 quarkus.datasource.devservices.username = camel
