--- a/integration-tests/csimple/src/main/resources/routes/my-routes.yaml
+++ b/integration-tests/csimple/src/main/resources/routes/my-routes.yaml
@@ -19,5 +19,5 @@
 - from:
     uri: "direct:csimple-yaml-dsl"
     steps:
-      - set-body:
+      - setBody:
           csimple: "Bonjour ${body}"
