--- a/integration-tests/main-yaml/src/main/resources/routes/my-rests.yaml
+++ b/integration-tests/main-yaml/src/main/resources/routes/my-rests.yaml
@@ -40,5 +40,5 @@
     from:
       uri: "direct:echoMethodPath"
       steps:
-        - set-body:
+        - setBody:
             simple: "${header.CamelHttpMethod}: ${header.CamelHttpPath}"
